--- a/imports.tex
+++ b/imports.tex
@@ -409,7 +409,8 @@
 \fancyfoot{}
 \fancyfoot[R]{\thepage}{}
 
-\setlength\headheight{14.5pt}
+% \setlength\headheight{14.5pt}
+\setlength{\headheight}{27.11653pt}
 \renewcommand{\headrulewidth}{0pt}
 \fancypagestyle{plain}{\fancyhead{}
 	\renewcommand{\headrulewidth}{0pt}
