--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper,12pt, PhD]{stb-thesis}
 
+% Imports
 \include{imports}
 
 % Words to not be capitalised by \capitalisewords
@@ -33,6 +34,7 @@
 \makenoidxglossaries
 
 \begin{document}
+
 
 
 % Front matter
