Added Modelling Images

--- a/frontmatter/nomenclature.tex
+++ b/frontmatter/nomenclature.tex
@@ -1,5 +1,6 @@
 \chapter*{Nomenclature\markboth{}{Nomenclature}}
 \addcontentsline{toc}{chapter}{Nomenclature}
+\phantomsection\label{chap:nomenclature}  % Add unique label
 
 \renewcommand{\nomname}{Variables and Functions}
 \renewcommand{\altnomname}{Variables and functions}
@@ -9,6 +10,7 @@
 \input{frontmatter/variables_and_functions}
 
 \newpage
+\phantomsection\label{sec:acronyms}  % Add unique label
 \section*{Acronyms and Abbreviations}
 \addcontentsline{toc}{section}{Acronyms and abbreviations}
 
@@ -16,6 +18,7 @@
 
 \glsaddall
 \newpage
+\phantomsection\label{sec:definitions}  % Add unique label
 \renewcommand\glossaryname{Definitions}
 \printnoidxglossaries
 
