--- a/imports.tex
+++ b/imports.tex
@@ -22,7 +22,7 @@
 \usepackage{float}
 
 % Font and text
-\usepackage[english,afrikaans]{babel}
+\usepackage[afrikaans,english]{babel}
 \usepackage{microtype}
 \usepackage{setspace}
 \newcommand{\myemph}[1]{{\sffamily\bfseries#1}}
@@ -374,8 +374,8 @@
 
 % Pseudo-code
 \usepackage{algpseudocode}  % should go after \usepackage{hyperref}
-\renewcommand{\thealgorithm}{\arabic{chapter}.\arabic{algorithm}} 
-\captionsetup[algorithm]{labelfont={bf},font=small,labelsep=colon}
+%\renewcommand{\thealgorithm}{\arabic{chapter}.\arabic{algorithm}} 
+%\captionsetup[algorithm]{labelfont={bf},font=small,labelsep=colon}
 
 % Fix titlesec issue
 \usepackage{etoolbox}
