--- a/thesis.tex
+++ b/thesis.tex
@@ -68,6 +68,7 @@
 \input{chapters/modelling}
 \input{chapters/imageprocessing}
 \input{chapters/stateestimation}
+\input{chapters/systemintegration.tex}
 \input{chapters/experiments}
 \input{chapters/conclusion}
 
