--- a/frontmatter/acknowledgements.tex
+++ b/frontmatter/acknowledgements.tex
@@ -14,10 +14,8 @@
 \begin{centering}
 
 	
-{\LARGE``} \textit{Above all else remember the friends you made along the way,}\\
-\textit{because it is not your journey that defines you, it is the people you help}\\
-\textit{and help you along the way.} {\LARGE''}\\
--- Mr. Niel Theron\\
+{\LARGE``} \textit{Whether you think you can or you can't, you're right.}{\LARGE''}\\
+-- Mr. Henry Ford\\
 
 
 \end{centering}
