--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 \newcommand{\Studentnumber}{22619291}
 \faculty{Faculty of Engineering}
 \degree{MEng (Electronic Engineering)}{Masters of (Electronic Engineering)}
-\supervisor[c]{Prof.\ H.W. Jordaan & Dr.\ S. Busch}
+\supervisor[c]{Prof.\ H.W. Jordaan \\ Dr.\ S. Busch}
 
 \input{frontmatter/defined_acronyms}
 \input{frontmatter/definitions}
