--- a/imports.tex
+++ b/imports.tex
@@ -15,9 +15,10 @@
 % Figures
 \usepackage[margin=\the\parindent,small,bf,rm]{caption}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{pdfpages}
 \setlength{\abovecaptionskip}{8pt}  % spacing above and below captions
-\usepackage{subfig}
 \usepackage{svg}
 \usepackage{float}
 
