--- a/mybib.bib
+++ b/mybib.bib
@@ -4,6 +4,7 @@
 	year = {2024},
     note = "\url{http://bit.ly/SUThesisFormat}",
 }
+
 @misc{sun_latex_template,
 	author = {Danie Els},
     title = {Stellenbosch University thesis bundle},
@@ -11,3 +12,32 @@
     note = "\url{https://ctan.org/pkg/stellenbosch-2}",
 }
 
+@misc{Diebel,
+   author = {James Diebel},
+   title = {Representing Attitude: Eular Angles, Unit Quaternions, and Rotation Vectors},
+   year = {2006},
+}
+
+@misc{Jongh,
+    author = {Willem Carel de Jongh},
+    title = {Space Debris: Pose Estimation Using Stereo Vision},
+    year = {2019},
+}
+
+@misc{Korf,
+    author = {Gerhardus Jozua Joubert Korf},
+    title = {Pose Estimation of Space Objects},
+    year = {2024},
+}
+
+@misc{Jordaan,
+    author = {Hendrik Willem Jordaan},
+    title = {Spinning Solar Sail: The Deployment and Control of a Spinning Solar Sail Satellite},
+    year = {2016},
+}
+
+@misc{Bassett,
+    author = {Eric A. Bessett},
+    title = {Test and Verification of a Cubesat Attitude Determination and Control System In Varaible Magnetic Fields},
+    year = {2016},
+}
